=========
Changelog
=========

This file keeps track of all notable changes to the Slurm Charms.

Unreleased
----------

- improve juju status' message to display failure when munge/slurm does not
  start correctly
- fix slurmd initialization when slurm.conf is present
- enable munge system service, so it always start when the machine boots

0.6.1
-----

- changed charm's status message to have consistent capitalization.
- fixed initialization order of the charms, to ensure database and controller
  start before compute nodes and REST server.

0.6.0 - 2021-05-28
------------------