@@ -7,6 +7,7 @@ This file keeps track of all notable changes to the Slurm Charms.
 Unreleased
 ----------
 
+- handle charm upgrade
 - improve juju status' message to display failure when munge/slurm does not
   start correctly
 - fix slurmd initialization when slurm.conf is present
